SET(EXE_NAME xodr)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

set(TARGET_NAME ${EXE_NAME}-${PLATFORM}_${ARCH})

SET(TARGET_SOURCES main_xodr.cxx)

ADD_EXECUTABLE(${TARGET_NAME} ${TARGET_SOURCES} )

TARGET_LINK_LIBRARIES(${TARGET_NAME} PUBLIC xodr)

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})


SET(EXE_NAME xosc)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

set(TARGET_NAME ${EXE_NAME}-${PLATFORM}_${ARCH})

SET(TARGET_SOURCES main_xosc.cxx)

ADD_EXECUTABLE(${TARGET_NAME} ${TARGET_SOURCES} )

TARGET_LINK_LIBRARIES(${TARGET_NAME} PUBLIC xosc)

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
