#-------------------------------------------------------------------------------------------------
SET(EXE_XODR_NAME xodr)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(TARGET_XODR_NAME ${EXE_XODR_NAME}-${PLATFORM}_${ARCH})
SET(TARGET_XODR_SOURCES main_xodr.cxx)
ADD_EXECUTABLE(${TARGET_XODR_NAME} ${TARGET_XODR_SOURCES} )
TARGET_LINK_LIBRARIES(${TARGET_XODR_NAME} PUBLIC xodr)
SET_TARGET_PROPERTIES(${TARGET_XODR_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
#-------------------------------------------------------------------------------------------------
SET(EXE_XOSC_NAME xosc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(TARGET_XOSC_NAME ${EXE_XOSC_NAME}-${PLATFORM}_${ARCH})
SET(TARGET_XOSC_SOURCES main_xosc.cxx)
ADD_EXECUTABLE(${TARGET_XOSC_NAME} ${TARGET_XOSC_SOURCES} )
TARGET_LINK_LIBRARIES(${TARGET_XOSC_NAME} PUBLIC xosc)
SET_TARGET_PROPERTIES(${TARGET_XOSC_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
#-------------------------------------------------------------------------------------------------
