SET(LIBRARY_NAME xodr)

SET(TARGET_HEADERS
    xodr.h
)

SET(TARGET_SOURCES
    xodr.cxx
)

INCLUDE_DIRECTORIES(${PUGIXML_INCLUDE_DIR})

ADD_LIBRARY(${LIBRARY_NAME} ${TARGET_SOURCES} ${TARGET_HEADERS})

TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC ${PUGIXML_LIBRARY})

TARGET_INCLUDE_DIRECTORIES(xodr PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> ${PUGIXML_INCLUDE_DIR}
    $<INSTALL_INTERFACE:./>  # <prefix>
)

SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES FOLDER ${PROJECT_NAME}/lib)

