SET(LIBRARY_NAME xodr)

SET(TARGET_HEADERS
    xodr.h
)

SET(TARGET_SOURCES
    xodr.cxx
)

ADD_LIBRARY(${LIBRARY_NAME} ${TARGET_SOURCES} ${TARGET_HEADERS})

TARGET_LINK_LIBRARIES(${LIBRARY_NAME} pugixml)

TARGET_INCLUDE_DIRECTORIES(xodr PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:./>  # <prefix>
)

set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)

GENERATE_EXPORT_HEADER(${LIBRARY_NAME})

#IF (BUILD_SHARED_LIBS)
#    set(CMAKE_CXX_VISIBILITY_PRESET hidden)
#    set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
#    set_target_properties(${LIBRARY_NAME} PROPERTIES VERSION ${XODR_VERSION} SOVERSION ${XODR_VERSION_MAJOR})
#    install(TARGETS ${LIBRARY_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
#ENDIF()

SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES FOLDER ${PROJECT_NAME}/lib)
#SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES CXX_VISIBILITY_PRESET hidden)
#SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES VISIBILITY_INLINES_HIDDEN 1)

SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES VERSION ${XODR_VERSION} SOVERSION ${XODR_VERSION_MAJOR})

install(FILES ${TARGET_INSTALL_HEADERS} ${CMAKE_CURRENT_BINARY_DIR}/${LIBRARY_NAME}_export.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
